# prbt_cell

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  calibration_samples.yaml  get.launch  new.launch  prbt_cell.repos  prbtcell.repo
.ci/gitlab_template/: RULES.yml
.devcontainer/: DOCKERFILE  devcontainer.json  workspace-entrypoint.sh
.github/workflows/: ci-ros.yml  docker.yml
calibration_data/: calibrated_pose.launch  calibrated_pose2.launch  calibrated_pose3.launch  joint_states.yaml  samples.yaml
docker/: Dockerfile  docker-compose.yml  workspace-entrypoint.sh
prbt_cell_bringup/: CMakeLists.txt  package.xml
prbt_cell_bringup/launch/: bringup.launch.py
prbt_cell_description/: CMakeLists.txt  package.xml
prbt_cell_description/launch/: basic.rviz  update_calibrated_data.launch.py  view_robot.launch  view_robot.launch.py
prbt_cell_description/meshes/: flange_v2.6.STL  flange_v3.STL  prbt_cell_v1.0.STL  schunk_40nnb.stl
prbt_cell_description/src/: camera_calibration_data_coverter.cpp
prbt_cell_description/urdf/: prbt_cell.urdf  prbt_cell.urdf.xacro  robot_cell.xacro  schunk_egp40.xacro  workcell.urdf  workcell.urdf.xacro
prbt_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
prbt_cell_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  prbt_cell.srdf  prbt_workcell.srdf
prbt_cell_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group.launch.py  moveit_planning_execution.launch  moveit_rviz.launch.py  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  rsp.launch.py  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_assistant.launch.py  simple_moveit_controller_manager.launch.xml  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse_db.launch.py
prbt_cell_pick_n_place/: CMakeLists.txt  package.xml
prbt_cell_pick_n_place/config/: moveitcpp.yaml
prbt_cell_pick_n_place/launch/: pick_n_place_moveitcpp.launch.py
prbt_cell_pick_n_place/src/: pick_n_place_node.cpp
prbt_cell_support/: CMakeLists.txt  package.xml
prbt_cell_support/launch/: workcell.launch.py
prbt_description/: CMakeLists.txt  package.xml
